<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="450dp"
        android:layout_height="300dp"
        android:background="@drawable/information_commander_layout_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintBounds">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/total_misses"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/exp_level_layout"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:srcCompat="@drawable/false_bullet"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtViewTotalMisses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/exp_level_layout"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/txtViewTotalHits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/exp_level_layout"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/exp_level_layout"
            android:layout_width="350dp"
            android:layout_height="76dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="TextSizeCheck">

            <ProgressBar
                android:id="@+id/expProgressBarResultScreen"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:progressDrawable="@drawable/custom_progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/levelTextViewResultScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Level: "
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/expProgressBarResultScreen"
                app:layout_constraintTop_toBottomOf="@+id/expProgressBarResultScreen"
                tools:ignore="HardcodedText" />


            <TextView
                android:id="@+id/expTextViewResultScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/exp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/expProgressBarResultScreen"
                app:layout_constraintTop_toBottomOf="@+id/expProgressBarResultScreen"
                tools:ignore="SmallSp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/btnExit_resultScreen"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_effect"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exp_level_layout"
            app:srcCompat="@drawable/btn_exit"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/total_hits"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/exp_level_layout"
            app:layout_constraintTop_toBottomOf="@+id/txtViewResult" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:srcCompat="@drawable/success_bullet"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtViewResult"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/win"
            android:fadeScrollbars="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>